syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

service SimpleService {
    rpc SimpleRPC (stream SimpleData) returns (stream SimpleData) {}
}

message SimpleData {
    string msg = 1;
}

service ServerStreamService {
    rpc StreamRpc(ServerStreamData) returns (stream ServerStreamData) {}
}

message ServerStreamData{
    string msg = 1;
}